# ProtView

./: .gitignore  Dockerfile  README.md  requirements.txt
backend/: calculations.py  main.py  mzml.py  pin_parser.py
frontend/: app.js  index.html  pin_parser.js  style.css  worker_calculations.js  worker_mzml.js
frontend/pkg/: mass_spec_wasm.d.ts  mass_spec_wasm.js  mass_spec_wasm_bg.wasm  mass_spec_wasm_bg.wasm.d.ts  package.json
frontend/wasm/: Cargo.toml
frontend/wasm/src/: lib.rs
