[package]
name = "mass-spec-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
quick-xml = { version = "0.31", features = ["serialize"] }
base64 = "0.21"
flate2 = "1.0"
bytemuck = "1.14"
js-sys = "0.3"
console_error_panic_hook = "0.1"
